fix: blurred bold font render in webfit on notification bubbles as only weight <500 supported

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -96,7 +96,6 @@ a:focus {
     left: 0;
     background: #fd7e14;
     color: black;
-    font-weight: bold;
     padding: 9px 12px 9px 12px;
     min-width: 200px;
     max-width: 450px;
